	  console device has special properties that make using NSH awkward.  Examples:
	  No CR-LF expansion, no character echoing, no command line editting.
	* arch/arm/src/stm32/stm32_lowputc.c and stm32_serial.c.  Correct severl bugs
	  involving serial port configuration.  These bugs are only critical if you
	  are trying to using multiple UARTs on STM32.
	* configs/stm3210e-eval/src/up_lcd.c:  Add a driver for the STM3210E-EVAL's LCD.
	* configs/stm3210e-eval/nx:  Add NX configuration for the STM3210E-EVAL.
	* configs/nuttx/arch.h (and arch/arm/src/stm32, configs/*/src/up_buttons.c):
	  Standardize interfaces exported for button support and button interrupts.
	* configs/stm3210e-eval/src/up_buttons.c - Add interrupting button support.
	  Also fixes a few errors in STM3210E-EVAL button decoding.
	* configs/stm3210e-eval/buttons: Add a configuration to exercise STM3210E-EVAL
	  buttons.
	* arch/arm/src/stm32/stm32_gpio.c:  GPIO interrupt handling for pin
	  numbers were being aliased:  5-9 together and 10-15 together.  Extended
	  the logic to peform decoding of GPIO interrupts and unique dispatching
	  for all 16 pins.
	* configs/stm3210e-eval/nxtext: Add a configuration for the apps/examples/nxtext
	  example.  This example focuses on placing text on the background while
	  pop-up windows occur.  Text should continue to update normally with or without
	  the popup windows present.
	* arch/arm/src/common/up_checkstack.c:  ARM stack overflow checking submitted
	  by Hal Glenn.
	* arch/arm/src/lpc17xx: Changes to compile successfully with no serial console
	  (also submitted by Hal Glenn).
	* graphics/nxfonts/nxfonts_convert.c:  Fixed a critical bug that caused
	  when renderer some fonts with bits-per-pixel > 8
	* graphics/nxbe/nxbe_move.c: Fixed an error in the graphics move logic (This
	  was a previously untested interface).  Basically, there is some confusion
	  between use of (x,y) as a relative offset or as an absolute position.